--- a/buildspec.yml
+++ b/buildspec.yml
@@ -5,8 +5,8 @@ phases:
     commands:
       - echo Logging in to Amazon ECR...
       - $(aws ecr get-login-password --region us-east-2 | docker login --username AWS --password-stdin 038269871983.dkr.ecr.us-east-2.amazonaws.com)
-      - curl -sS -o aws-iam-authenticator https://amazon-eks.s3.us-west-2.amazonaws.com/1.19.6/2021-01-05/bin/linux/amd64/aws-iam-authenticator
-      - curl -sS -o kubectl https://amazon-eks.s3.us-west-2.amazonaws.com/1.20.4/2021-04-12/bin/linux/amd64/kubectl
+      - curl -sS -o aws-iam-authenticator https://amazon-eks.s3.us-east-2.amazonaws.com/1.19.6/2021-01-05/bin/linux/amd64/aws-iam-authenticator
+      - curl -sS -o kubectl https://amazon-eks.s3.us-east-2.amazonaws.com/1.20.4/2021-04-12/bin/linux/amd64/kubectl
       - chmod +x ./kubectl ./aws-iam-authenticator
       - export PATH=$PWD/:$PATH
   pre_build:
@@ -18,7 +18,7 @@ phases:
   build:
     commands:
       - docker build -t my_python_eks .
-
+      - docker tag my-aws-eks:latest 038269871983.dkr.ecr.us-east-2.amazonaws.com/my-aws-eks:latest
   post_build:
     commands:
       - docker push 038269871983.dkr.ecr.us-east-2.amazonaws.com/my_python_eks:latest
