--- a/buildspec.yml
+++ b/buildspec.yml
@@ -12,12 +12,12 @@ phases:
   pre_build:
       commands:
         - TAG="$(date +%Y-%m-%d.%H.%M.%S).$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | head -c 8)"
-        - sed -i 's@CONTAINER_IMAGE@'"$REPOSITORY:$TAG"'@' knote.yaml
+        - sed -i 's@CONTAINER_IMAGE@'"$REPOSITORY_URI:$TAG"'@' knote.yaml
         - aws ecr get-login-password --region us-east-2 | docker login --username AWS --password-stdin 038269871983.dkr.ecr.us-east-2.amazonaws.com
         - export KUBECONFIG=$HOME/.kube/config
   build:
     commands:
-      - docker build -t $REPOSITORY_URI:$TAG .
+      - docker build --tag $REPOSITORY_URI:$TAG .
   post_build:
     commands:
       - docker push 038269871983.dkr.ecr.us-east-2.amazonaws.com/my-aws-eks:latest
