--- a/buildspec.yml
+++ b/buildspec.yml
@@ -17,7 +17,7 @@ phases:
         - export KUBECONFIG=$HOME/.kube/config
   build:
     commands:
-        - docker build -t $REPOSITORY_NAME:$TAG 
+        - docker build -t $REPOSITORY_URI:$TAG 
   post_build:
     commands:
       - docker push $REPOSITORY_URI:$TAG
