--- a/buildspec.yml
+++ b/buildspec.yml
@@ -17,7 +17,7 @@ phases:
         - export KUBECONFIG=$HOME/.kube/config
   build:
     commands:
-        - docker build --t $REPOSITORY_NAME:$TAG 
+        - docker image build --tag $REPOSITORY_URI:$TAG 
   post_build:
     commands:
       - docker push $REPOSITORY_URI:$TAG
@@ -28,6 +28,6 @@ phases:
       - export AWS_EXPIRATION=$(echo ${CREDENTIALS} | jq -r '.Credentials.Expiration')
       - aws eks update-kubeconfig --name $EKS_CLUSTER_NAME
       - kubectl apply -f Knote.yml 
-      - printf '[{"name":"learnitguide/knotejs:1.0","imageUri":"%s"}]' $REPOSITORY:$TAG > build.json
+      - printf '[{"name":"knote_app","imageUri":"%s"}]' $REPOSITORY_URI:$TAG > build.json
 artifacts:
   files: build.json
