--- a/buildspec.yml
+++ b/buildspec.yml
@@ -12,7 +12,7 @@ phases:
   pre_build:
       commands:
         - TAG="$(date +%Y-%m-%d.%H.%M.%S).$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | head -c 8)"
-        - sed -i '$@CONTAINER_IMAGE@'"$REPOSITORY_URI:$TAG"'@' eks-deployment.yml
+        - sed -i 's@CONTAINER_IMAGE@'"$REPOSITORY_URI:$TAG"'@' eks-deployment.yml
         - aws ecr get-login-password --region us-east-2 | docker login --username AWS --password-stdin 038269871983.dkr.ecr.us-east-2.amazonaws.com
         - export KUBECONFIG=$HOME/.kube/config
   build:
